--- a/todo-old/src/todo/gui/CategoryGUI.form
+++ b/todo-old/src/todo/gui/CategoryGUI.form
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="UTF-8" ?>
+<?xml version="1.1" encoding="UTF-8" ?>
 
 <Form version="1.2" maxVersion="1.2" type="org.netbeans.modules.form.forminfo.JFrameFormInfo">
   <Properties>
@@ -66,6 +66,7 @@
         <Component class="javax.swing.JButton" name="jButtonDeleteInstitution">
           <Properties>
             <Property name="text" type="java.lang.String" value="L&#xf6;schen"/>
+            <Property name="enabled" type="boolean" value="false"/>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButtonDeleteInstitutionActionPerformed"/>
