--- a/todo-old/src/todo/gui/TodoListGUI.form
+++ b/todo-old/src/todo/gui/TodoListGUI.form
@@ -5,7 +5,7 @@
     <Property name="defaultCloseOperation" type="int" value="2"/>
     <Property name="title" type="java.lang.String" value="OP Liste"/>
     <Property name="minimumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-      <Dimension value="[800, 600]"/>
+      <Dimension value="[1000, 346]"/>
     </Property>
   </Properties>
   <SyntheticProperties>
@@ -58,7 +58,7 @@
           <Dimension value="[0, 0]"/>
         </Property>
         <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-          <Dimension value="[0, 0]"/>
+          <Dimension value="null"/>
         </Property>
       </Properties>
 
